[Resource Timing] Align TAO parsing to spec

TAO parsing had two issues:
* It was splitting the host values on whitespace rather than a comma. This
used to be the specified behavior, but changed in
https://github.com/w3c/resource-timing/pull/68
* When it was checking the different hosts in the host list, it was not checking
for "*" as a possible value.

This CL fixes those two issues and aligns the test expectations accordingly.

Bug: 651861, 833032, 626703
Change-Id: I8a3b7e705ed7089719ad0f52607363392c7de934
Reviewed-on: https://chromium-review.googlesource.com/1013409
Reviewed-by: Nicolás Peña Moreno <npm@chromium.org>
Commit-Queue: Yoav Weiss <yoav@yoav.ws>
Cr-Commit-Position: refs/heads/master@{#552127}
Former-commit-id: d65176dd732b75aa98260798276930ebcf9523b8